feat(architecture): restructure